--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igdevops/ig-tools",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "工具库搭建",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "lint:fix": "eslint --ext .ts src --fix",
     "build": "rollup -c",
     "test": "jest --coverage",
+    "release": "standard-version",
     "pre-commit": "npm run lint && jest",
     "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
   },
@@ -39,6 +40,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "husky": "^8.0.1",
     "jest": "^28.1.0",
+    "standard-version": "^9.5.0",
     "ts-jest": "^28.0.4",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
